# stuge

./: README.md  example.py  main.py  pyproject.toml  stuge.py
src/stuge/: __init__.py  stuge.py
