[project]
name = "stuge"
version = "0.1.0"
description = "STUGE: Simple TUrtle Game Engine"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Quentin Lurkin", email = "qlurkin@gmail.com" }]
dependencies = []
classifiers = ["License :: OSI Approved :: MIT License"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
